postgres_tests/brin_bloom/expected.txt

-----------
QUERY:
CREATE TABLE brintest_bloom (byteacol bytea,
	charcol "char",
	namecol name,
	int8col bigint,
	int2col smallint,
	int4col integer,
	textcol text,
	oidcol oid,
	float4col real,
	float8col double precision,
	macaddrcol macaddr,
	inetcol inet,
	cidrcol cidr,
	bpcharcol character,
	datecol date,
	timecol time without time zone,
	timestampcol timestamp without time zone,
	timestamptzcol timestamp with time zone,
	intervalcol interval,
	timetzcol time with time zone,
	numericcol numeric,
	uuidcol uuid,
	lsncol pg_lsn
) WITH (fillfactor=10);
RESULT:
	postgres: None

-----------
QUERY:


INSERT INTO brintest_bloom SELECT
	repeat(stringu1, 8)::bytea,
	substr(stringu1, 1, 1)::"char",
	stringu1::name, 142857 * tenthous,
	thousand,
	twothousand,
	repeat(stringu1, 8),
	unique1::oid,
	(four + 1.0)/(hundred+1),
	odd::float8 / (tenthous + 1),
	format('%s:00:%s:00:%s:00', to_hex(odd), to_hex(even), to_hex(hundred))::macaddr,
	inet '10.2.3.4/24' + tenthous,
	cidr '10.2.3/24' + tenthous,
	substr(stringu1, 1, 1)::bpchar,
	date '1995-08-15' + tenthous,
	time '01:20:30' + thousand * interval '18.5 second',
	timestamp '1942-07-23 03:05:09' + tenthous * interval '36.38 hours',
	timestamptz '1972-10-10 03:00' + thousand * interval '1 hour',
	justify_days(justify_hours(tenthous * interval '12 minutes')),
	timetz '01:30:20+02' + hundred * interval '15 seconds',
	tenthous::numeric(36,30) * fivethous * even / (hundred + 1),
	format('%s%s-%s-%s-%s-%s%s%s', to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'))::uuid,
	format('%s/%s%s', odd, even, tenthous)::pg_lsn
FROM tenk1 ORDER BY unique2 LIMIT 100;
RESULT:
	postgres: None

-----------
QUERY:


-- throw in some NULL/* REPLACED */''s and different values
INSERT INTO brintest_bloom (inetcol, cidrcol) SELECT
	inet 'fe80::6e40:8ff:fea9:8c46' + tenthous,
	cidr 'fe80::6e40:8ff:fea9:8c46' + tenthous
FROM tenk1 ORDER BY thousand, tenthous LIMIT 25;
RESULT:
	postgres: None

-----------
QUERY:


-- test bloom specific index options
-- ndistinct must be >= -1.0
CREATE INDEX brinidx_bloom ON brintest_bloom USING brin (
	byteacol bytea_bloom_ops(n_distinct_per_range = -1.1)
);
RESULT:
	postgres: ERROR - value -1.1 out of bounds for option "n_distinct_per_range"
DETAIL:  Valid values are between "-1.000000" and "2147483647.000000".


-----------
QUERY:

-- false_positive_rate must be between 0.0001 and 0.25
CREATE INDEX brinidx_bloom ON brintest_bloom USING brin (
	byteacol bytea_bloom_ops(false_positive_rate = 0.00009)
);
RESULT:
	postgres: ERROR - value 0.00009 out of bounds for option "false_positive_rate"
DETAIL:  Valid values are between "0.000100" and "0.250000".


-----------
QUERY:

CREATE INDEX brinidx_bloom ON brintest_bloom USING brin (
	byteacol bytea_bloom_ops(false_positive_rate = 0.26)
);
RESULT:
	postgres: ERROR - value 0.26 out of bounds for option "false_positive_rate"
DETAIL:  Valid values are between "0.000100" and "0.250000".


-----------
QUERY:


CREATE INDEX brinidx_bloom ON brintest_bloom USING brin (
	byteacol bytea_bloom_ops,
	charcol char_bloom_ops,
	namecol name_bloom_ops,
	int8col int8_bloom_ops,
	int2col int2_bloom_ops,
	int4col int4_bloom_ops,
	textcol text_bloom_ops,
	oidcol oid_bloom_ops,
	float4col float4_bloom_ops,
	float8col float8_bloom_ops,
	macaddrcol macaddr_bloom_ops,
	inetcol inet_bloom_ops,
	cidrcol inet_bloom_ops,
	bpcharcol bpchar_bloom_ops,
	datecol date_bloom_ops,
	timecol time_bloom_ops,
	timestampcol timestamp_bloom_ops,
	timestamptzcol timestamptz_bloom_ops,
	intervalcol interval_bloom_ops,
	timetzcol timetz_bloom_ops,
	numericcol numeric_bloom_ops,
	uuidcol uuid_bloom_ops,
	lsncol pg_lsn_bloom_ops
) with (pages_per_range = 1);
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE brinopers_bloom (colname name, typ text,
	op text[], value text[], matches int[],
	check (cardinality(op) = cardinality(value)),
	check (cardinality(op) = cardinality(matches)));
RESULT:
	postgres: None

-----------
QUERY:


INSERT INTO brinopers_bloom VALUES
	('byteacol', 'bytea',
	 '{=}',
	 '{BNAAAABNAAAABNAAAABNAAAABNAAAABNAAAABNAAAABNAAAA}',
	 '{1}'),
	('charcol', '"char"',
	 '{=}',
	 '{M}',
	 '{6}'),
	('namecol', 'name',
	 '{=}',
	 '{MAAAAA}',
	 '{2}'),
	('int2col', 'int2',
	 '{=}',
	 '{800}',
	 '{1}'),
	('int4col', 'int4',
	 '{=}',
	 '{800}',
	 '{1}'),
	('int8col', 'int8',
	 '{=}',
	 '{1257141600}',
	 '{1}'),
	('textcol', 'text',
	 '{=}',
	 '{BNAAAABNAAAABNAAAABNAAAABNAAAABNAAAABNAAAABNAAAA}',
	 '{1}'),
	('oidcol', 'oid',
	 '{=}',
	 '{8800}',
	 '{1}'),
	('float4col', 'float4',
	 '{=}',
	 '{1}',
	 '{4}'),
	('float8col', 'float8',
	 '{=}',
	 '{0}',
	 '{1}'),
	('macaddrcol', 'macaddr',
	 '{=}',
	 '{2c:00:2d:00:16:00}',
	 '{2}'),
	('inetcol', 'inet',
	 '{=}',
	 '{10.2.14.231/24}',
	 '{1}'),
	('inetcol', 'cidr',
	 '{=}',
	 '{fe80::6e40:8ff:fea9:8c46}',
	 '{1}'),
	('cidrcol', 'inet',
	 '{=}',
	 '{10.2.14/24}',
	 '{2}'),
	('cidrcol', 'inet',
	 '{=}',
	 '{fe80::6e40:8ff:fea9:8c46}',
	 '{1}'),
	('cidrcol', 'cidr',
	 '{=}',
	 '{10.2.14/24}',
	 '{2}'),
	('cidrcol', 'cidr',
	 '{=}',
	 '{fe80::6e40:8ff:fea9:8c46}',
	 '{1}'),
	('bpcharcol', 'bpchar',
	 '{=}',
	 '{W}',
	 '{6}'),
	('datecol', 'date',
	 '{=}',
	 '{2009-12-01}',
	 '{1}'),
	('timecol', 'time',
	 '{=}',
	 '{02:28:57}',
	 '{1}'),
	('timestampcol', 'timestamp',
	 '{=}',
	 '{1964-03-24 19:26:45}',
	 '{1}'),
	('timestamptzcol', 'timestamptz',
	 '{=}',
	 '{1972-10-19 09:00:00-07}',
	 '{1}'),
	('intervalcol', 'interval',
	 '{=}',
	 '{1 mons 13 days 12:24}',
	 '{1}'),
	('timetzcol', 'timetz',
	 '{=}',
	 '{01:35:50+02}',
	 '{2}'),
	('numericcol', 'numeric',
	 '{=}',
	 '{2268164.347826086956521739130434782609}',
	 '{1}'),
	('uuidcol', 'uuid',
	 '{=}',
	 '{52225222-5222-5222-5222-522252225222}',
	 '{1}'),
	('lsncol', 'pg_lsn',
	 '{=, IS, IS NOT}',
	 '{44/455222, NULL, NULL}',
	 '{1, 25, 100}');
RESULT:
	postgres: None

-----------
QUERY:


DO $x$
DECLARE
	r record;
RESULT:
	postgres: ERROR - unterminated dollar-quoted string at or near "$x$
DECLARE
	r record;"
LINE 3: DO $x$
           ^


-----------
QUERY:

	r2 record;
RESULT:
	postgres: ERROR - syntax error at or near "r2"
LINE 2:  r2 record;
         ^


-----------
QUERY:

	cond text;
RESULT:
	postgres: ERROR - syntax error at or near "cond"
LINE 2:  cond text;
         ^


-----------
QUERY:

	idx_ctids tid[];
RESULT:
	postgres: ERROR - syntax error at or near "idx_ctids"
LINE 2:  idx_ctids tid[];
         ^


-----------
QUERY:

	ss_ctids tid[];
RESULT:
	postgres: ERROR - syntax error at or near "ss_ctids"
LINE 2:  ss_ctids tid[];
         ^


-----------
QUERY:

	count int;
RESULT:
	postgres: ERROR - syntax error at or near "count"
LINE 2:  count int;
         ^


-----------
QUERY:

	plan_ok bool;
RESULT:
	postgres: ERROR - syntax error at or near "plan_ok"
LINE 2:  plan_ok bool;
         ^


-----------
QUERY:

	plan_line text;
RESULT:
	postgres: ERROR - syntax error at or near "plan_line"
LINE 2:  plan_line text;
         ^


-----------
QUERY:

BEGIN
	FOR r IN SELECT colname, oper, typ, value[ordinality], matches[ordinality] FROM brinopers_bloom, unnest(op) WITH ORDINALITY AS oper LOOP

		-- prepare the condition
		IF r.value IS NULL THEN
			cond := format('%I %s %L', r.colname, r.oper, r.value);
RESULT:
	postgres: ERROR - syntax error at or near "FOR"
LINE 3:  FOR r IN SELECT colname, oper, typ, value[ordinality], matc...
         ^


-----------
QUERY:

		ELSE
			cond := format('%I %s %L::%s', r.colname, r.oper, r.value, r.typ);
RESULT:
	postgres: ERROR - syntax error at or near "ELSE"
LINE 2:   ELSE
          ^


-----------
QUERY:

		END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:   END IF;
              ^


-----------
QUERY:


		-- run the query using the brin index
		SET enable_seqscan = 0;
RESULT:
	postgres: None

-----------
QUERY:

		SET enable_bitmapscan = 1;
RESULT:
	postgres: None

-----------
QUERY:


		plan_ok := false;
RESULT:
	postgres: ERROR - syntax error at or near "plan_ok"
LINE 3:   plan_ok := false;
          ^


-----------
QUERY:

		FOR plan_line IN EXECUTE format($y$EXPLAIN SELECT array_agg(ctid) FROM brintest_bloom WHERE %s $y$, cond) LOOP
			IF plan_line LIKE '%Bitmap Heap Scan on brintest_bloom%' THEN
				plan_ok := true;
RESULT:
	postgres: ERROR - syntax error at or near "FOR"
LINE 2:   FOR plan_line IN EXECUTE format($y$EXPLAIN SELECT array_ag...
          ^


-----------
QUERY:

			END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:    END IF;
               ^


-----------
QUERY:

		END LOOP;
RESULT:
	postgres: ERROR - syntax error at or near "LOOP"
LINE 2:   END LOOP;
              ^


-----------
QUERY:

		IF NOT plan_ok THEN
			RAISE WARNING 'did not get bitmap indexscan plan for %', r;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:   IF NOT plan_ok THEN
          ^


-----------
QUERY:

		END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:   END IF;
              ^


-----------
QUERY:


		EXECUTE format($y$SELECT array_agg(ctid) FROM brintest_bloom WHERE %s $y$, cond)
			INTO idx_ctids;
RESULT:
	postgres: ERROR - syntax error at or near "INTO"
LINE 4:    INTO idx_ctids;
           ^


-----------
QUERY:


		-- run the query using a seqscan
		SET enable_seqscan = 1;
RESULT:
	postgres: None

-----------
QUERY:

		SET enable_bitmapscan = 0;
RESULT:
	postgres: None

-----------
QUERY:


		plan_ok := false;
RESULT:
	postgres: ERROR - syntax error at or near "plan_ok"
LINE 3:   plan_ok := false;
          ^


-----------
QUERY:

		FOR plan_line IN EXECUTE format($y$EXPLAIN SELECT array_agg(ctid) FROM brintest_bloom WHERE %s $y$, cond) LOOP
			IF plan_line LIKE '%Seq Scan on brintest_bloom%' THEN
				plan_ok := true;
RESULT:
	postgres: ERROR - syntax error at or near "FOR"
LINE 2:   FOR plan_line IN EXECUTE format($y$EXPLAIN SELECT array_ag...
          ^


-----------
QUERY:

			END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:    END IF;
               ^


-----------
QUERY:

		END LOOP;
RESULT:
	postgres: ERROR - syntax error at or near "LOOP"
LINE 2:   END LOOP;
              ^


-----------
QUERY:

		IF NOT plan_ok THEN
			RAISE WARNING 'did not get seqscan plan for %', r;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:   IF NOT plan_ok THEN
          ^


-----------
QUERY:

		END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:   END IF;
              ^


-----------
QUERY:


		EXECUTE format($y$SELECT array_agg(ctid) FROM brintest_bloom WHERE %s $y$, cond)
			INTO ss_ctids;
RESULT:
	postgres: ERROR - syntax error at or near "INTO"
LINE 4:    INTO ss_ctids;
           ^


-----------
QUERY:


		-- make sure both return the same results
		count := array_length(idx_ctids, 1);
RESULT:
	postgres: ERROR - syntax error at or near "count"
LINE 4:   count := array_length(idx_ctids, 1);
          ^


-----------
QUERY:


		IF NOT (count = array_length(ss_ctids, 1) AND
				idx_ctids @> ss_ctids AND
				idx_ctids <@ ss_ctids) THEN
			-- report the results of each scan to make the differences obvious
			RAISE WARNING 'something not right in %: count %', r, count;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 3:   IF NOT (count = array_length(ss_ctids, 1) AND
          ^


-----------
QUERY:

			SET enable_seqscan = 1;
RESULT:
	postgres: None

-----------
QUERY:

			SET enable_bitmapscan = 0;
RESULT:
	postgres: None

-----------
QUERY:

			FOR r2 IN EXECUTE 'SELECT ' || r.colname || ' FROM brintest_bloom WHERE ' || cond LOOP
				RAISE NOTICE 'seqscan: %', r2;
RESULT:
	postgres: ERROR - syntax error at or near "FOR"
LINE 2:    FOR r2 IN EXECUTE 'SELECT ' || r.colname || ' FROM brinte...
           ^


-----------
QUERY:

			END LOOP;
RESULT:
	postgres: ERROR - syntax error at or near "LOOP"
LINE 2:    END LOOP;
               ^


-----------
QUERY:


			SET enable_seqscan = 0;
RESULT:
	postgres: None

-----------
QUERY:

			SET enable_bitmapscan = 1;
RESULT:
	postgres: None

-----------
QUERY:

			FOR r2 IN EXECUTE 'SELECT ' || r.colname || ' FROM brintest_bloom WHERE ' || cond LOOP
				RAISE NOTICE 'bitmapscan: %', r2;
RESULT:
	postgres: ERROR - syntax error at or near "FOR"
LINE 2:    FOR r2 IN EXECUTE 'SELECT ' || r.colname || ' FROM brinte...
           ^


-----------
QUERY:

			END LOOP;
RESULT:
	postgres: ERROR - syntax error at or near "LOOP"
LINE 2:    END LOOP;
               ^


-----------
QUERY:

		END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 2:   END IF;
              ^


-----------
QUERY:


		-- make sure we found expected number of matches
		IF count != r.matches THEN RAISE WARNING 'unexpected number of results % for %', count, r;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 4:   IF count != r.matches THEN RAISE WARNING 'unexpected numbe...
          ^


-----------
QUERY:
 END IF;
RESULT:
	postgres: ERROR - syntax error at or near "IF"
LINE 1:  END IF;
             ^


-----------
QUERY:

	END LOOP;
RESULT:
	postgres: ERROR - syntax error at or near "LOOP"
LINE 2:  END LOOP;
             ^


-----------
QUERY:

END;
RESULT:
	postgres: None

-----------
QUERY:

$x$;
RESULT:
	postgres: ERROR - unterminated dollar-quoted string at or near "$x$;"
LINE 2: $x$;
        ^


-----------
QUERY:


RESET enable_seqscan;
RESULT:
	postgres: None

-----------
QUERY:

RESET enable_bitmapscan;
RESULT:
	postgres: None

-----------
QUERY:


INSERT INTO brintest_bloom SELECT
	repeat(stringu1, 42)::bytea,
	substr(stringu1, 1, 1)::"char",
	stringu1::name, 142857 * tenthous,
	thousand,
	twothousand,
	repeat(stringu1, 42),
	unique1::oid,
	(four + 1.0)/(hundred+1),
	odd::float8 / (tenthous + 1),
	format('%s:00:%s:00:%s:00', to_hex(odd), to_hex(even), to_hex(hundred))::macaddr,
	inet '10.2.3.4' + tenthous,
	cidr '10.2.3/24' + tenthous,
	substr(stringu1, 1, 1)::bpchar,
	date '1995-08-15' + tenthous,
	time '01:20:30' + thousand * interval '18.5 second',
	timestamp '1942-07-23 03:05:09' + tenthous * interval '36.38 hours',
	timestamptz '1972-10-10 03:00' + thousand * interval '1 hour',
	justify_days(justify_hours(tenthous * interval '12 minutes')),
	timetz '01:30:20' + hundred * interval '15 seconds',
	tenthous::numeric(36,30) * fivethous * even / (hundred + 1),
	format('%s%s-%s-%s-%s-%s%s%s', to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'), to_char(tenthous, 'FM0000'))::uuid,
	format('%s/%s%s', odd, even, tenthous)::pg_lsn
FROM tenk1 ORDER BY unique2 LIMIT 5 OFFSET 5;
RESULT:
	postgres: None

-----------
QUERY:


SELECT brin_desummarize_range('brinidx_bloom', 0);
RESULT:
	postgres: [('',)]

-----------
QUERY:

VACUUM brintest_bloom;
RESULT:
	postgres: None

-----------
QUERY:
  -- force a summarization cycle in brinidx

UPDATE brintest_bloom SET int8col = int8col * int4col;
RESULT:
	postgres: None

-----------
QUERY:

UPDATE brintest_bloom SET textcol = '' WHERE textcol IS NOT NULL;
RESULT:
	postgres: None

-----------
QUERY:


-- Tests for brin_summarize_new_values
SELECT brin_summarize_new_values('brintest_bloom');
RESULT:
	postgres: ERROR - "brintest_bloom" is not an index


-----------
QUERY:
 -- error, not an index
SELECT brin_summarize_new_values('tenk1_unique1');
RESULT:
	postgres: ERROR - "tenk1_unique1" is not a BRIN index


-----------
QUERY:
 -- error, not a BRIN index
SELECT brin_summarize_new_values('brinidx_bloom');
RESULT:
	postgres: [(0,)]

-----------
QUERY:
 -- ok, no change expected

-- Tests for brin_desummarize_range
SELECT brin_desummarize_range('brinidx_bloom', -1);
RESULT:
	postgres: ERROR - block number out of range: -1


-----------
QUERY:
 -- error, invalid range
SELECT brin_desummarize_range('brinidx_bloom', 0);
RESULT:
	postgres: [('',)]

-----------
QUERY:

SELECT brin_desummarize_range('brinidx_bloom', 0);
RESULT:
	postgres: [('',)]

-----------
QUERY:

SELECT brin_desummarize_range('brinidx_bloom', 100000000);
RESULT:
	postgres: [('',)]

-----------
QUERY:


-- Test brin_summarize_range
CREATE TABLE brin_summarize_bloom (
    value int
) WITH (fillfactor=10, autovacuum_enabled=false);
RESULT:
	postgres: None

-----------
QUERY:

CREATE INDEX brin_summarize_bloom_idx ON brin_summarize_bloom USING brin (value) WITH (pages_per_range=2);
RESULT:
	postgres: None

-----------
QUERY:

-- Fill a few pages
DO $$
DECLARE curtid tid;
BEGIN
  LOOP
    INSERT INTO brin_summarize_bloom VALUES (1) RETURNING ctid INTO curtid;
    EXIT WHEN curtid > tid '(2, 0)';
  END LOOP;
END;
$$;
RESULT:
	postgres: None

-----------
QUERY:


-- summarize one range
SELECT brin_summarize_range('brin_summarize_bloom_idx', 0);
RESULT:
	postgres: [(0,)]

-----------
QUERY:

-- nothing: already summarized
SELECT brin_summarize_range('brin_summarize_bloom_idx', 1);
RESULT:
	postgres: [(0,)]

-----------
QUERY:

-- summarize one range
SELECT brin_summarize_range('brin_summarize_bloom_idx', 2);
RESULT:
	postgres: [(1,)]

-----------
QUERY:

-- nothing: page doesn/* REPLACED */''t exist in table
SELECT brin_summarize_range('brin_summarize_bloom_idx', 4294967295);
RESULT:
	postgres: [(0,)]

-----------
QUERY:

-- invalid block number values
SELECT brin_summarize_range('brin_summarize_bloom_idx', -1);
RESULT:
	postgres: ERROR - block number out of range: -1


-----------
QUERY:

SELECT brin_summarize_range('brin_summarize_bloom_idx', 4294967296);
RESULT:
	postgres: ERROR - block number out of range: 4294967296


-----------
QUERY:



-- test brin cost estimates behave sanely based on correlation of values
CREATE TABLE brin_test_bloom (a INT, b INT);
RESULT:
	postgres: None

-----------
QUERY:

INSERT INTO brin_test_bloom SELECT x/100,x%100 FROM generate_series(1,10000) x(x);
RESULT:
	postgres: None

-----------
QUERY:

CREATE INDEX brin_test_bloom_a_idx ON brin_test_bloom USING brin (a) WITH (pages_per_range = 2);
RESULT:
	postgres: None

-----------
QUERY:

CREATE INDEX brin_test_bloom_b_idx ON brin_test_bloom USING brin (b) WITH (pages_per_range = 2);
RESULT:
	postgres: None

-----------
QUERY:

VACUUM ANALYZE brin_test_bloom;
RESULT:
	postgres: None

-----------
QUERY:


-- Ensure brin index is used when columns are perfectly correlated
EXPLAIN (COSTS OFF) SELECT * FROM brin_test_bloom WHERE a = 1;
RESULT:
	postgres: [('Bitmap Heap Scan on brin_test_bloom',), ('  Recheck Cond: (a = 1)',), ('  ->  Bitmap Index Scan on brin_test_bloom_a_idx',), ('        Index Cond: (a = 1)',)]

-----------
QUERY:

-- Ensure brin index is not used when values are not correlated
EXPLAIN (COSTS OFF) SELECT * FROM brin_test_bloom WHERE b = 1;
RESULT:
	postgres: [('Seq Scan on brin_test_bloom',), ('  Filter: (b = 1)',)]
